feat: Adding rate logic
