# backend/api/routes/raing_routes.go
@@ -1,0 +1,14 @@
+package routes
+
+import (
+	"backend/controllers"
+	middleware "backend/middlewares"
+	"github.com/gin-gonic/gin"
+)
+
+func InitializeRatingRoutes(router *gin.RouterGroup) {
+	ratingGroup := router.Group("/rating")
+	{
+		ratingGroup.POST("/create", middleware.RequireAuth, controllers.CreateRating)
+	}
+}
